# polish

./: .gitignore  Cargo.toml  README.md
crates/polish-actions/: Cargo.toml
crates/polish-actions/src/: action.rs  components.rs  csrf.rs  error.rs  field.rs  form.rs  lib.rs  validator.rs
crates/polish-agent/: Cargo.toml
crates/polish-agent/src/: audit.rs  lib.rs  permissions.rs  provider.rs  registry.rs  review.rs  task.rs
crates/polish-capabilities/: Cargo.toml
crates/polish-capabilities/src/: leakage.rs  lib.rs  matrix.rs  surface.rs
crates/polish-cli/: Cargo.toml
crates/polish-cli/src/: main.rs
crates/polish-core/: Cargo.toml
crates/polish-core/src/: attrs.rs  context.rs  error.rs  escape.rs  html.rs  lib.rs  page.rs  render.rs
crates/polish-designer/: Cargo.toml
crates/polish-designer/src/: main.rs
crates/polish-docs/: Cargo.toml
crates/polish-docs/src/: lib.rs  render.rs  site.rs  spec.rs
crates/polish-live/: Cargo.toml
crates/polish-live/src/: channel.rs  event.rs  fragment.rs  lib.rs  stream.rs
crates/polish-server/: Cargo.toml
crates/polish-server/src/: bus.rs  config.rs  lib.rs  server.rs
crates/polish-state/: Cargo.toml
crates/polish-state/src/: error.rs  lib.rs  machine.rs  transition.rs
crates/polish-style/: Cargo.toml
crates/polish-style/src/: components.rs  css.rs  lib.rs  theme.rs  tokens.rs
crates/polish-test/: Cargo.toml
crates/polish-test/src/: action.rs  assert_html.rs  capability.rs  lib.rs  route.rs  snapshot.rs  state.rs
crates/polish-visual/: Cargo.toml
crates/polish-visual/src/: audit.rs  capture.rs  chrome.rs  diff.rs  lib.rs  report.rs
examples/app/: Cargo.toml
examples/app/src/: main.rs
