[workspace]
members = [
    "crates/polish-core",
    "crates/polish-style",
    "crates/polish-actions",
    "crates/polish-state",
    "crates/polish-capabilities",
    "crates/polish-docs",
    "crates/polish-live",
    "crates/polish-test",
    "crates/polish-visual",
    "crates/polish-agent",
    "crates/polish-cli",
    "examples/app",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
hyper = { version = "1" }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
regex = "1"
indexmap = { version = "2", features = ["serde"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
