[package]
name = "polish-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "polish"
path = "src/main.rs"

[dependencies]
polish-core = { path = "../polish-core" }
polish-style = { path = "../polish-style" }
polish-actions = { path = "../polish-actions" }
polish-state = { path = "../polish-state" }
polish-capabilities = { path = "../polish-capabilities" }
polish-docs = { path = "../polish-docs" }
polish-live = { path = "../polish-live" }
polish-test = { path = "../polish-test" }
polish-agent = { path = "../polish-agent" }
polish-visual = { path = "../polish-visual" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
