[package]
name = "polish-live"
version = "0.1.0"
edition = "2021"

[dependencies]
polish-core = { path = "../polish-core" }
polish-actions = { path = "../polish-actions" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
