[package]
name = "polish-server"
version = "0.1.0"
edition = "2021"

[dependencies]
polish-core   = { path = "../polish-core" }
polish-style  = { path = "../polish-style" }
polish-actions = { path = "../polish-actions" }
polish-live   = { path = "../polish-live" }
tokio         = { workspace = true }
axum          = { workspace = true }
tower-http    = { workspace = true }
tracing       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio-stream  = { version = "0.1", features = ["sync"] }
futures-util  = "0.3"
