[package]
name = "polish-test"
version = "0.1.0"
edition = "2021"

[dependencies]
polish-core = { path = "../polish-core" }
polish-style = { path = "../polish-style" }
polish-actions = { path = "../polish-actions" }
polish-capabilities = { path = "../polish-capabilities" }
polish-docs = { path = "../polish-docs" }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
