[package]
name = "polish-example-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
polish-core = { path = "../../crates/polish-core" }
polish-style = { path = "../../crates/polish-style" }
polish-actions = { path = "../../crates/polish-actions" }
polish-state = { path = "../../crates/polish-state" }
polish-capabilities = { path = "../../crates/polish-capabilities" }
polish-docs = { path = "../../crates/polish-docs" }
polish-live = { path = "../../crates/polish-live" }
polish-test = { path = "../../crates/polish-test" }
polish-agent = { path = "../../crates/polish-agent" }
polish-visual = { path = "../../crates/polish-visual" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
